casestudy/deploy3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: customapache-deployment
 labels:
  app: custom
spec:
 replicas: 2
 selector:
  matchLabels:
   app: custom
 template:
   metadata:
    labels:
     app: custom
   spec:
     containers:
     - name: custom 
       image: mounikathatipalli/custom1
       ports:
       - containerPort: 80
