casestudy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sipmple-fanout-example  
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
       - path: /custom
         backend:
          serviceName: custom
          servicePort: 80
