casestudy/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-kexample  
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
       - path: /apache
         backend:
          serviceName: apache
          servicePort: 80
